adde logout and login on enter

--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
 
             <div class="login-form">
                 <p data-bind="visible:message().length > 0, text:message"></p>
-                <input data-bind="value:username" type="text" placeholder="redmine username"/>
+                <input class="bottom-border" data-bind="value:username" type="text" placeholder="redmine username"/>
                 <input data-bind="value:password" id="password" placeholder="password" type="password"/>
                 <input data-bind="click:doLogin" type="button" value="sign in"/>
             </div>
