--- a/profile-page.html
+++ b/profile-page.html
@@ -18,6 +18,10 @@
         <title>eWorkers</title>
     </head>
     <body class="profile-page">
+        <ul id="menu">
+            <li><a target="_blank" href="http://www.eworkers.space:8080/account">My Account</a></li>
+            <li><a href="javascript:void(0);" onclick="logout();" >Log Out</a></li>
+        </ul>
         <header>
             <div class="container" data-bind="with: worker">
                 <div class="header-logo profile-header" >
