--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         <title>eWorkers</title>
     </head>
     <body class="home">
+        <ul id="menu">
+            <li><a target="_blank" href="http://www.eworkers.space:8080/account">My Account</a></li>
+            <li><a href="javascript:void(0);" onclick="logout();" >Log Out</a></li>
+        </ul>
+
         <header>
             <div class="container">
                 <div class="header-logo">
