--- a/profile-page.html
+++ b/profile-page.html
@@ -54,7 +54,10 @@
                                 Hello, I'm
                                 <span class="title-yellow" data-bind="text:name"></span>
                                 <br />
-                                <span class="info-title" data-bind="text:caste"></span> and
+                                <span class="info-title" data-bind="text:caste"></span>
+                                <!-- ko if: title -->
+                                    and
+                                <!-- /ko -->
                                 <span class="info-title" data-bind="text:title"></span>
                             </h2>
 
