asdfasd as dsad sanjsd ajksad jbsad jkbads kj

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     </head>
     <body class="home">
         <ul id="menu">
-            <li><a target="_blank" href="http://www.eworkers.space:8080/account">My Account</a></li>
+            <li><a target="_blank" href="https://docs.google.com/document/d/1_bLREgbqZU69NkSCmgXYDOtQsa3qFUJlKhkh5TEGPLs/edit?usp=sharing" >Report bug</a></li>
+            <li><a href="javascript:void(0);" onclick="myAccount();" >My Account</a></li>
             <li><a href="javascript:void(0);" onclick="logout();" >Log Out</a></li>
         </ul>
 
